<?xml version="1.0"?>
<package format="2">
  <name>diffamr_base</name>
  <version>0.1.0</version>
  <description>The diffamr_base package</description>

  <maintainer email="shen.i@live.com">Sheni Hamitaj</maintainer>
  <maintainer email="eylul.ozer@birfenelektrik.com.tr">Eylul Ozer</maintainer>
  <maintainer email="gizemnursena.coban@birfenelektrik.com">Gizem Nursena Coban</maintainer>
  <maintainer email="berke.unlu@birfenelektrik.com">Berke Unlu</maintainer>

  <license>copyright birfenelektrik</license>
  <url type="website">https://github.com/eylulzer/dowaksa_amr/tree/master/diffamr_base</url>

  <author email="shen.i@live.com">Sheni Hamitaj</author>
  <author email="eylul.ozer@birfenelektrik.com.tr">Eylul Ozer</author>
  <author email="gizemnursena.coban@birfenelektrik.com">Gizem Nursena Coban</author>
  <author email="berke.unlu@birfenelektrik.com">Berke Unlu</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>ros_control</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
