<package>
  <name>my_viz</name>
  <version>0.5.0</version>

  <description>my_viz package</description>
  <author email="merve.uzuner@birfen.com.tr">Merve Uzuner</author>

  <maintainer email="merve.uzuner@birfen.com.tr">Merve Uzuner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>rviz</run_depend>

</package>
